<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/btnRegister" >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="512dp"
    android:layout_marginBottom="40dp" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@android:drawable/btn_default"
        android:height="20dp"
        android:minHeight="25dp"
        android:onClick="getPicture"
        android:text="@string/homeBtnUpload"
        android:visibility="gone"
        android:width="220dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView1"
        android:text="@string/reportViolation" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_marginLeft="18dp"
        android:text="@string/speedRate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/imageView3"
        android:text="@string/trafficRules" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="38dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:contentDescription="@string/accountDetails"
        android:onClick="getPicture"
        android:src="@drawable/take_picture" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:contentDescription="@string/accountDetails"
        android:onClick="showSpeedTracker"
        android:src="@drawable/speedometer" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="38dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/accountDetails"
        android:onClick="showTips"
        android:src="@drawable/traffic_rules" />

</RelativeLayout>

</ScrollView>