<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_alignRight="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/passwordHolder"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginTop="118dp"
        android:ems="10"
        android:hint="@string/usernameHolder"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:text="@string/loginTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:background="@android:drawable/btn_default"
        android:onClick="authenticate"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/loginBtnText" />

</RelativeLayout>